--- a/templates/about.html
+++ b/templates/about.html
@@ -6,7 +6,8 @@
     <!--<link rel="stylesheet" href="index.css" type="text/css"/>-->
 </head>
 <body>
+    <div>about</div>
     <div id="root"></div>
-    <script src="dist/bundle.js"></script>
+    <script src="about/bundle.js"></script>
 </body>
 </html>
